--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CPSC 332 Participation Landind </title>
+    <title>CPSC 332 Participation Landing</title>
 </head>
-ss
 
 <body>
     <h1>Participation 9-18</h1>
+
+    <!-- Form starts here -->
+    <form method="GET" action="https://gu-web-dev-2024.github.io/participation-3-more-html-d-olivares/submission.html">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required><br><br>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required><br><br>
+
+        <label for="message">Message:</label><br>
+        <textarea id="message" name="message" rows="4" cols="50"></textarea><br><br>
+
+        <input type="submit" value="Submit">
+    </form>
+    <!-- Form ends here -->
 
 </body>
 
