answers + extra widgets

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         <label for="message">Message:</label><br>
         <textarea id="message" name="message" rows="4" cols="50"></textarea><br><br>
 
+        <!-- Checkboxes start here -->
+        <label for="interests">Select your interests:</label><br>
+        <input type="checkbox" id="coding" name="interests" value="coding">
+        <label for="coding">Food</label><br>
+
+        <input type="checkbox" id="sports" name="interests" value="sports">
+        <label for="sports">Sports</label><br><br>
+        <!-- Checkboxes start here -->
+
         <input type="submit" value="Submit">
     </form>
     <!-- Form ends here -->
